--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -98,6 +98,7 @@ else
 <script src="~/lib/js/datepicker.js"></script>
 <script src="~/lib/js/bootbox.js"></script>
 <script src="~/lib/js/bootbox.js"></script>
+<script src="~/lib/ext/adminlte/plugins/chartjs/chart.min.js"></script>
 <script src="~/lib/ext/datatables/jquery.dataTables.min.js"></script>
 <script src="~/lib/ext/datatables/dataTables.bootstrap.min.js"></script>
 <script src="~/lib/ext/datatables/buttons/dataTables.buttons.min.js"></script>
