--- a/Riskvalve/Views/Home/Detail.cshtml
+++ b/Riskvalve/Views/Home/Detail.cshtml
@@ -1,5 +1,6 @@
 @{
     ViewData["Title"] = "Detail";
+    var assetList = ViewData["assetList"] as List<AssetModel>;
 }
 
 <div class="row">
@@ -7,5 +8,73 @@
         <partial name="HomeSidebar" />
     </div>
     <div class="col-xs-10" style="padding-right: 50px">
+        <h3>Asset</h3>
+        <form class="form-inline">
+            <select class="form-control" id="ddlBusinessArea">
+                <option value="">All Area</option>
+                <option value="1">Business Area 1</option>
+                <option value="2">Business Area 2</option>
+                <option value="3">Business Area 3</option>
+            </select>
+            <select class="form-control" id="ddlPlatform">
+                <option value="">All Platform</option>
+                <option value="1">Business Area 1</option>
+                <option value="2">Business Area 2</option>
+                <option value="3">Business Area 3</option>
+            </select>
+            <button class="btn btn-primary" id="btnSearch">Filter</button>
+        </form>
+        <br /><br />
+        <table class="table table-bordered datatable" style="width: 100%;">
+            <thead>
+                <tr>
+                    <th>No</th>
+                    <th>Tag No</th>
+                    <th>Business Area</th>
+                    <th>Platform</th>
+                    <th>Valve Type</th>
+                    <th>Size (inch)</th>
+                    <th>Rating</th>
+                    <th>PID Number</th>
+                    <th>Parent Equipment No</th>
+                    <th>Last Inspection Date</th>
+                    <th>Risk Status</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    int ctr = 0;
+                    if (assetList != null)
+                    {
+                        foreach (var item in assetList)
+                        {
+                            ctr++;
+                            <tr style="margin: 0;padding;0;">
+                                <td>@ctr</td>
+                                <td>@item.TagNo</td>
+                                <td>@item.BusinessArea</td>
+                                <td>@item.Platform</td>
+                                <td>@item.ValveType</td>
+                                <td>@item.Size</td>
+                                <td>@item.ClassRating</td>
+                                <td>@item.PIDNo</td>
+                                <td>@item.ParentEquipmentNo</td>
+                                <td>@item.ParentEquipmentDescription</td>
+                                <td class='row'>
+                                    <div class="col-xs-2" style="padding: 0;margin:0">
+                                        <div style="background-color:yellow; height:20px; width:20px"></div>
+                                    </div>
+                                    <div class="col-xs-10">1D</div>
+                                </td>
+                                <td>
+                                    <button class="btn btn-primary btn-asset-action" attr-mode="view"
+                                        attr-itemid="@item.Id">Detail</button>
+                                </td>
+                            </tr>
+                        }
+                    }
+                }
+        </table>
     </div>
 </div>
