--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -12,87 +12,98 @@
     <link rel="stylesheet" href="~/lib/css/bootstrap.css" />
     <link rel="stylesheet" href="~/lib/css/datepicker.css" />
     <link rel="stylesheet" href="~/lib/ext/datatables/dataTables.bootstrap.css">
-    </script>
     <link rel="stylesheet" href="~/lib/ext/datatables/buttons/buttons.dataTables.min.css">
-    </script>
     @* <link rel="stylesheet" href="~/lib/css/fontawesome.css" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Riskvalve.styles.css" asp-append-version="true" />
+    <style>
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
-@if (isLogin)
-{
-    <body>
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="row nav-row-custom">
-                    <div class="col-xs-2" style="background-color: white;">
-                        <img src="~/lib/images/logo.jpg" class="img-responsive" alt="Riskvalve"
-                            style="max-height:75px; aspect-ratio:1/1" />
-                    </div>
-                    <div class="col-xs-10">
-                        <div class="collapse navbar-collapse" id="myNavbar">
-                            <ul class="nav navbar-nav">
-                                <li>
-                                    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Asset Register
-                                        <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a asp-area="" asp-controller="AssetRegister" asp-action="Area">Area</a>
-                                        </li>
-                                        <li><a asp-area="" asp-controller="AssetRegister"
-                                                asp-action="Platform">Platform</a>
-                                        </li>
-                                        <li><a asp-area="" asp-controller="AssetRegister" asp-action="Asset">Asset</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a asp-area="" asp-controller="Inspection" asp-action="Index">IMR</a>
-                                </li>
-                                <li>
-                                    <a asp-area="" asp-controller="Assesment" asp-action="Index">Assesment</a>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tool
-                                        <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a asp-area="" asp-controller="Tool" asp-action="ImportAssetRegister">Import Asset Register</a></li>
-                                        <li><a asp-area="" asp-controller="Tool" asp-action="ImportAssesment">Import Assesment</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a asp-area="" asp-controller="User" asp-action="Index">User</a>
-                                </li>
-                            </ul>
-                            <p id="btn-signout" class="navbar-text navbar-right" style="text-align: right;"><a class="navbar-link">Aldo
-                                    Febrian<br />Surface Facility Engineer</a></p>
+<body>
+    @if (isLogin)
+    {
+        <header>
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="row nav-row-custom">
+                        <div class="col-xs-2" style="background-color: white;">
+                            <img src="~/lib/images/logo.jpg" class="img-responsive" alt="Riskvalve"
+                                style="max-height:75px; aspect-ratio:1/1" />
+                        </div>
+                        <div class="col-xs-10">
+                            <div class="collapse navbar-collapse" id="myNavbar">
+                                <ul class="nav navbar-nav">
+                                    <li>
+                                        <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Asset Register
+                                            <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a asp-area="" asp-controller="AssetRegister" asp-action="Area">Area</a>
+                                            </li>
+                                            <li><a asp-area="" asp-controller="AssetRegister"
+                                                    asp-action="Platform">Platform</a>
+                                            </li>
+                                            <li><a asp-area="" asp-controller="AssetRegister" asp-action="Asset">Asset</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a asp-area="" asp-controller="Inspection" asp-action="Index">IMR</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="" asp-controller="Assesment" asp-action="Index">Assesment</a>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tool
+                                            <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a asp-area="" asp-controller="Tool" asp-action="ImportAssetRegister">Import
+                                                    Asset Register</a></li>
+                                            <li><a asp-area="" asp-controller="Tool" asp-action="ImportAssesment">Import
+                                                    Assesment</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a asp-area="" asp-controller="User" asp-action="Index">User</a>
+                                    </li>
+                                </ul>
+                                <p id="btn-signout" class="navbar-text navbar-right" style="text-align: right;"><a
+                                        class="navbar-link">Aldo
+                                        Febrian<br />Surface Facility Engineer</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container-fluid" style="padding: 0; margin:0;">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Riskvalve - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </nav>
+        </header>
+        <div class="container-fluid" style="padding: 0; margin:0;">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
         </div>
-    </footer>
+
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2024 - Riskvalve - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+    }
+    else
+    {
+        @RenderBody()
+    }
 </body>
-}
-else
-{
-    @RenderBody()
-}
 <script src="~/lib/js/jquery.js"></script>
 <script src="~/lib/js/bootstrap.js"></script>
 <script src="~/lib/js/datepicker.js"></script>
@@ -106,6 +117,7 @@ else
 <script src="~/lib/ext/datatables/buttons/buttons.html5.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
+@Html.RenderPartialSectionScripts()
 <script>
     $(document).ready(function () {
         $("#btn-signout").click(function () {
