--- a/Riskvalve/Views/User/Index.cshtml
+++ b/Riskvalve/Views/User/Index.cshtml
@@ -66,8 +66,9 @@
                     <div class="form-group">
                         <label for="field-role">Role</label>
                         <select id="field-role" name="role" class="form-control" required>
-                            @* <option value="Super Administrator">Super Administrator</option> *@
-                            <option value="Surface Facility Engineer">Surface Facility Engineer</option>
+                            <option value="Admin">Admin</option>
+                            <option value="Engineer">Engineer</option>
+                            <option value="Viewer">Viewer</option>
                         </select>
                     </div>
                 </div>
