--- a/Riskvalve/Views/Inspection/Index.cshtml
+++ b/Riskvalve/Views/Inspection/Index.cshtml
@@ -55,9 +55,7 @@
                                                     value="WIB-PSV-V05A-4" readonly>
                                             </div>
                                             <div class="form-group col-md-6">
-                                                <label for="field-inspection-current-condition-limit-state-a">Current
-                                                    Condition Limit State
-                                                    A</label>
+                                                <label for="field-inspection-current-condition-limit-state-a">Current Condition Leakage to Atmosphere</label>
                                                 <select class="form-control"
                                                     id="field-inspection-current-condition-limit-state-a">
                                                     @foreach (var item in limitState)
@@ -72,8 +70,7 @@
                                                     class="form-control datepicker" />
                                             </div>
                                             <div class="form-group col-md-6">
-                                                <label for="field-inspection-current-condition-limit-state-b">Current
-                                                    Condition Limit State B</label>
+                                                <label for="field-inspection-current-condition-limit-state-b">Current Condition Failure of Function</label>
                                                 <select class="form-control"
                                                     id="field-inspection-current-condition-limit-state-b">
                                                     @foreach (var item in limitState)
@@ -89,8 +86,7 @@
                                                     id="field-inspection-inspection-method" value="Visual Inspection">
                                             </div>
                                             <div class="form-group col-md-6">
-                                                <label for="field-inspection-current-condition-limit-state-c">Current
-                                                    Condition Limit State C</label>
+                                                <label for="field-inspection-current-condition-limit-state-c">Current Condition Passing Across Valve</label>
                                                 <select class="form-control"
                                                     id="field-inspection-current-condition-limit-state-c">
                                                     @foreach (var item in limitState)
