--- a/Riskvalve/Views/Shared/InspectionAssesmentSidebar.cshtml
+++ b/Riskvalve/Views/Shared/InspectionAssesmentSidebar.cshtml
@@ -93,6 +93,7 @@
         }
     }
     $(document).ready(function () {
+        fold_all_sidebar_menu();
         $("#searchForm").on("keyup", function () {
             var value = $(this).val().toLowerCase();
             if (value == '') {
@@ -191,7 +192,7 @@
             }
         });
 
-        @* fold_all_sidebar_menu(); *@
+    @* fold_all_sidebar_menu(); *@
         });
 </script>
     )
