--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -63,7 +63,7 @@
                                         <div class="form-grid">
                                             <div class="form-group-inline">
                                                 <label for="field-inspection-assetid">Asset ID</label>
-                                                <input type="text" class="form-control" id="field-inspection-assetid" readonly>
+                                                <input type="text" class="form-control" id="field-inspection-assetid" name="AssetID" readonly>
                                             </div>
                                             <div class="form-group-inline">
                                                 <label for="field-inspection-valvetype">Valve Type</label>
@@ -144,15 +144,18 @@
                                 <div class="sub-container">
                                     <div class="form-container">
                                         <div class="form-grid">
+                                            <input type="hidden" name="Id" id="data-id">
                                             <div class="form-group ">
                                                 <label for="field-maintenance-date">Maintenance Date</label>
                                                 <input id="field-maintenance-date" type="text"
-                                                    class="form-control datepicker" />
+                                                    class="form-control datepicker" name="MaintenanceDate"/>
                                             </div>
                                             <div class="form-group ">
                                                 <label for="field-maintenance-repaired">Is Valve Repaired</label>
                                                 <select class="form-control"
-                                                    id="field-maintenance-repaired">
+                                                    id="field-maintenance-repaired"
+                                                    name="IsValveRepairedID"
+                                                >
                                                     <option value="1">Yes</option>
                                                     <option value="2">No</option>
                                                 </select>
@@ -160,7 +163,9 @@
                                             <div class="form-group">
                                                 <label for="field-maintenance-description">Maintenance Description</label>
                                                 <textarea class="form-control" id="field-maintenance-description"
-                                                    rows="8"></textarea>
+                                                    rows="8"
+                                                    name="MaintenanceDescription"
+                                                    ></textarea>
                                             </div>
                                             <div class="form-group">
                                                 <label for="field-maintenance-image">Maintenance Image</label>
@@ -176,11 +181,11 @@
                                     <div>
                                         <div class="box-footer">
                                             <button type="button" class="btn submit-button form-submit"
-                                                id="btn-submit">Save</button>
+                                                id="btn-submit" onclick="submitForm(this)">Save</button>
                                             <button type="button" class="btn print-button form-submit"
                                                 id="btn-submit">Print</button>
                                             <button type="button" class="btn delete-button form-submit"
-                                            id="btn-submit">Delete</button>
+                                            id="btn-submit" onclick="deleteForm(this)">Delete</button>
                                         </div>
                                     </div>
                                 </div>
@@ -199,6 +204,104 @@
             const ctr = $(this).closest('a').attr('tab-num')
             close_inspection(ctr);
         })
+
+        function submitForm(el) {
+            const form = $(el).closest('form.inspection-form')
+            const equipmentId = $(el).closest('.tab-pane').attr('equipment-id')
+            const ctr = $(el).closest('.tab-pane').attr('tab-num')
+            const nativeForm = form[0]
+            const formData = new FormData(nativeForm);
+            if(form.hasClass('history-form')) {
+                // update
+                $.ajax({
+                    url: '/Maintenance/UpdateMaintenance',
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function(response) {
+                        form.addClass('history-form')
+                        // Handle success response
+                        alert('Data successfully updated')
+                    },
+                    error: function(xhr, status, error) {
+                        alert('Error submitting the form')
+                    }
+                });
+            } else {
+                // add new
+                $.ajax({
+                    url: '/Maintenance/AddMaintenance',
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function(res) {
+                        form.addClass('history-form')
+                        // add menu to tree
+                        console.log(equipmentId)
+                        console.log($('ul[equipment-id='+equipmentId+']'))
+                        $('ul[equipment-id="'+equipmentId+'"]').append(`
+                            <li class="treeview">
+                                <a class="btn-add-new-inspection" history-button="" 
+                                attr-id="${res.asset.id}" attr-inspection-id="${res.id}" 
+                                attr-name="${res.asset.tagNo} ${res.maintenanceDate}" 
+                                attr-sidebar-level="4" 
+                                attr-find-inspection="${res.asset.businessArea}" 
+                                attr-find-platform="${res.asset.platform}" 
+                                attr-find-equipment="${res.asset.tagNo}" 
+                                attr-find-imr="NEW"
+                                onclick="addTab.apply(this)"
+                                >
+                                    ${res.maintenanceDate}
+                                </a>
+                            </li>
+                        `)
+
+                        form.find('.preview-image-gallery .single-image').remove()
+                        form.find('.preview-image-gallery input[type=file]').remove()
+                        fetchHistoryData({
+                            id: res.id,
+                            counter: ctr
+                        })
+                        alert('Data successfully inserted')
+
+                        
+                    },
+                    error: function(xhr, status, error) {
+                        // Handle error
+                        alert('error submitting the form')
+                    }
+                });
+            }
+        }
+
+        function deleteForm(el) {
+            const form = $(el).closest('form.inspection-form')
+            
+            const id = form.find('#data-id').val()
+            const tabId = $(el).closest('.tab-pane').attr('id')
+            const ctr = $(el).closest('.tab-pane').attr('tab-num')
+
+            if(confirm('Are you sure you want to delete this data?')) {
+                $.ajax({
+                    url: '/Maintenance/DeleteMaintenance',
+                    type: 'POST', // or 'GET' depending on your form method
+                    data: {
+                        Id: id
+                    },
+                    success: function(response) {
+                        close_inspection(ctr, true)
+                        alert('Data successfully deleted')
+                        $('.btn-add-new-inspection[attr-inspection-id='+id+']').closest('li').remove()
+                        // Handle success response
+                    },
+                    error: function(xhr, status, error) {
+                        alert('Error deleting data')
+                    }
+                });
+            }
+        }
 
         function fetchAssetData ({id, counter}) {
             $.ajax({
@@ -219,7 +322,7 @@
 
         function fetchHistoryData ({id, counter}) {
             $.ajax({
-                url: '/Inspection/GetInspectionDetail',
+                url: '/Maintenance/GetMaintenanceDetail',
                 type: 'GET',
                 data: { id },
                 success: function (data) {
@@ -229,19 +332,13 @@
                     })
 
                     // fill history data
-                    $('#field-inspection-date'+counter).val(data.inspectionDate)
-                    $('#field-inspection-inspection-method'+counter).val(data.inspectionMethodID)
-                    $('#field-inspection-current-condition-limit-state-a'+counter).val(data.currentConditionLeakeageToAtmosphereID)
-                    $('#field-inspection-current-condition-limit-state-b'+counter).val(data.currentConditionFailureOfFunctionID)
-                    $('#field-inspection-current-condition-limit-state-c'+counter).val(data.currentConditionPassingAcrossValveID)
-                    $('#field-inspection-effectiveness'+counter).val(data.inspectionEffectivenessID)
-                    $('#field-inspection-function-condition'+counter).val(data.functionCondition)
-                    $('#field-inspection-description'+counter).val(data.inspectionDescription)
-                    $('#field-inspection-test-pressure-if-any'+counter).val(data.testPressureIfAny)
+                    $('#field-maintenance-date'+counter).val(data.maintenanceDate)
+                    $('#field-maintenance-repaired'+counter).val(data.isValveRepairedID)
+                    $('#field-maintenance-description'+counter).val(data.maintenanceDescription)
 
                     let galleryHtml = ''
-                    data.inspectionFiles.forEach(i => {
-                        galleryHtml += `<input type="hidden" identifier="gallery-${i.id}" name="inspection_image['${i.id}']" value="${i.fileName}">
+                    data.maintenanceFiles.forEach(i => {
+                        galleryHtml += `<input type="hidden" identifier="delete-gallery-${i.id}" name="deletedImageIDs[${i.id}]" value="0">
                         <div class="single-image" data-identifier="gallery-${i.id}">
                             <img src="/${i.filePath}"">
                             <div class="delete-image-btn" onclick="deleteGalleryImage('gallery-${i.id}')">
@@ -253,6 +350,10 @@
 
                     //fill image
                     $('#inspection' + counter).find('.preview-image-gallery').append(galleryHtml)
+                    $('#inspection' + counter).find('form').addClass('history-form')
+
+                    //fill ID
+                    $('#inspection'+counter).find('#data-id').val(id)
                 },
                 error: function (error) {
                     alert('History not found');
@@ -286,98 +387,74 @@
         }
 
         $(document).ready(function () {
-            let template_inspection = $('#template_inspection');
-            let template_inspection_html = template_inspection.html();
-            template_inspection.remove();
-            let template_inspection_header = $('#template_inspection_header');
-            let template_inspection_header_html = template_inspection_header.html();
-            template_inspection_header.remove();
+            $('.btn-add-new-inspection').click(addTab);
+        });
 
-            let idx = 0;
-            $('.btn-add-new-inspection').click(function () {
-                let ctr = idx;
+        let template_inspection = $('#template_inspection');
+        let template_inspection_html = template_inspection.html();
+        template_inspection.remove();
+        let template_inspection_header = $('#template_inspection_header');
+        let template_inspection_header_html = template_inspection_header.html();
+        template_inspection_header.remove();
 
-                let id = $(this).attr('attr-id');
-                let isHistory = false
-                let name = $(this).attr('attr-name');
-                if($(this).attr('attr-inspection-id')) {
-                    isHistory = true
-                    id = $(this).attr('attr-inspection-id')
-                } else {
-                    name = `New Maintenance ${name}`
-                }
-                
-                let tabheadercontainer = $('#inspectiontabheader');
-                let tabcontentcontainer = $('#tabcontentcontainer');
-                tabheadercontainer.append('<li id="inspectionheader' + ctr + '"><a href="#inspection' + ctr + '" data-bs-toggle="tab" class="nav-link" data-bs-target="#inspection'+ctr+'" type="button" role="tab" tab-num="'+ctr+'">' + name + ' <button type="button" class="btn-close-inspection"><i class="fa-solid fa-xmark"></i></button></a></li>');
-                tabcontentcontainer.append('<div class="tab-pane" id="inspection' + ctr + '" tab-num="'+ctr+'">' + template_inspection_html + '</div>');
-                let tabcontent = tabcontentcontainer.find('.form-control');
-                tabcontent.each(function () {
-                    let name = $(this).attr('id') + ctr;
-                    $(this).attr('id', name);
-                });
-                //find button submit then add ctr on id
-                let submitbtn = tabcontentcontainer.find('.form-submit');
-                submitbtn.each(function () {
-                    let name = $(this).attr('id') + ctr;
-                    $(this).attr('id', name);
-                })
+        let idx = 0;
+        function addTab () {
+            let ctr = idx;
 
-                //update the label also
-                let tabcontentlabel = tabcontentcontainer.find('label');
-                tabcontentlabel.each(function () {
-                    let label = $(this).attr('for') + ctr;
-                    $(this).attr('for', label);
-                });
+            let id = $(this).attr('attr-id');
+            const equipmentId = id
+            let isHistory = false
+            let name = $(this).attr('attr-name');
+            if($(this).attr('attr-inspection-id')) {
+                isHistory = true
+                id = $(this).attr('attr-inspection-id')
 
-                $('#inspectionheader' + ctr).find('a').click();
+            } else {
+                name = `New Inspection ${name}`
+            }
+            
+            let tabheadercontainer = $('#inspectiontabheader');
+            let tabcontentcontainer = $('#tabcontentcontainer');
+            tabheadercontainer.append('<li id="inspectionheader' + ctr + '"><a href="#inspection' + ctr + '" data-bs-toggle="tab" class="nav-link" data-bs-target="#inspection'+ctr+'" type="button" role="tab" tab-num="'+ctr+'">' + name + ' <button type="button" class="btn-close-inspection"><i class="fa-solid fa-xmark"></i></button></a></li>');
+            tabcontentcontainer.append('<div class="tab-pane" equipment-id="'+equipmentId+'" id="inspection' + ctr + '" tab-num="'+ctr+'">' + template_inspection_html + '</div>');
+            let tabcontent = tabcontentcontainer.find('.form-control');
+            tabcontent.each(function () {
+                let name = $(this).attr('id') + ctr;
+                $(this).attr('id', name);
+            });
+            //find button submit then add ctr on id
+            let submitbtn = tabcontentcontainer.find('.form-submit');
+            submitbtn.each(function () {
+                let name = $(this).attr('id') + ctr;
+                $(this).attr('id', name);
+            })
 
-                $('#field-inspection-valvetagno' + ctr).val('');
-                $('#field-inspection-current-condition-limit-state-a' + ctr).val('');
-                $('#field-inspection-date' + ctr).val('');
-                $('#field-inspection-current-condition-limit-state-b' + ctr).val('');
-                $('#field-inspection-inspection-method' + ctr).val('');
-                $('#field-inspection-current-condition-limit-state-c' + ctr).val('');
-                $('#field-inspection-effectiveness' + ctr).val('');
-                $('#field-inspection-function-condition' + ctr).val('');
-                $('#field-inspection-description' + ctr).val('');
-                $('#field-inspection-test-pressure-if-any' + ctr).val('');
-                $('#field-inspection-image-1' + ctr).val('');
-                $('#field-inspection-image-2' + ctr).val('');
-                $('#field-inspection-image-3' + ctr).val('');
-                $('#field-inspection-image-4' + ctr).val('');
-                $('#field-inspection-maintenancedate' + ctr).val('');
-                $('#field-inspection-isvalverepaired' + ctr).val('');
-                $('#field-inspection-maintenancedescription' + ctr).val('');
-                $('#field-inspection-image1' + ctr).val('');
-                $('#field-inspection-image2' + ctr).val('');
-                $('#field-inspection-image3' + ctr).val('');
-                $('#field-inspection-image4' + ctr).val('');
-
-                isHistory ? fetchHistoryData({
-                    id,
-                    counter: ctr
-                }) : fetchAssetData({
-                    id,
-                    counter: ctr
-                })
-
-                initDatepicker()
-                
-                moveToLastTab()
-                idx++;
-
-                $('.image-gallery-upload').on('change', function() {
-                    imagesPreview(this);
-                });
+            //update the label also
+            let tabcontentlabel = tabcontentcontainer.find('label');
+            tabcontentlabel.each(function () {
+                let label = $(this).attr('for') + ctr;
+                $(this).attr('for', label);
             });
 
-            // $('.btn-add-new-inspection').first().trigger('click')
+            $('#inspectionheader' + ctr).find('a').click();
 
-            // $('.btn-close-inspection').click(function () {
-            //     var currctr = $(this).parent().parent().attr('id').replace('inspectionheader', '');
-            //     close_inspection(currctr);
-            // });
-        });
+            isHistory ? fetchHistoryData({
+                id,
+                counter: ctr
+            }) : fetchAssetData({
+                id,
+                counter: ctr
+            })
+
+            initDatepicker()
+            
+            moveToLastTab()
+
+            idx++;
+
+            $('.image-gallery-upload').on('change', function() {
+                imagesPreview(this);
+            });
+        }
     </script>
 }
